<resources>
    <string name="app_name">MascotApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MascotApp </string>
    <string name="nav_header_subtitle">Programación movil</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Salir</string>
    <string name="web_client_id">760810468991-kbdj8jiee1kl6stajjrqoc69bql1qdva.apps.googleusercontent.com</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_registrar">Registrar mascota</string>
    <string name="menu_editar">Editar mascota</string>
    <string name="menu_consultar">Consultar mascota</string>
    <string name="menu_acerca">Créditos</string>
    <string name="menu_eliminar">Eliminar mascota</string>
    <string name="menu_buscar">Buscar mascota</string>
    <string name="menu_papelera">Papelera</string>
    <string name="txtBienvenida">Bienvenido</string>
    <string name="txtInicioSession">Iniciar sesión</string>
    <string name="txtRegistro">Registrar</string>
    <string name="txtOlvidasteContras">¿Olvidaste tu contraseña?</string>
    <string name="txtAunNoTienesCuenta">¿Aún no tienes cuenta?</string>
    <string name="txtCrearCuenta">Crea una</string>
    <string name="txtIngreseUsuario">Ingrese el usuario o email</string>
    <string name="txtIngreseEmail">Correo electronico</string>
    <string name="txtIngreseContrasena">Ingrese la contraseña</string>
    <string name="txtNuevaCuenta">Nueva cuenta</string>
    <string name="txtYaTienesCuenta">¿Ya tienes cuenta?</string>
    <string name="txtIniciaSesion">Inicia sessión</string>
    <string name="txtRegistrate">Registrate</string>
    <string name="txtNombreUsuario">Nombre</string>
    <string name="txtApellidoUsuario">Apellido</string>
    <string name="txtConfirmeContrasena">Confirme la contraseña</string>
    <string name="txtTerminosYcondiciones">He leído y acepto los Terminos y Condiciones de uso</string>
    <string name="txtRegistrar">Nueva mascota</string>
    <string name="txtEstatus">Estatus</string>
    <string name="txtEnviarPapelera">Enviar a la papelera</string>
    <string name="txtQuitarPapelera">Restaurar elemento</string>
    <string name="txtEliminarDefinitivamente">Eliminar definitivamente</string>
    <string name="txtEstatusActivo">Activo</string>
    <string name="txtEstatusInactivo">Inactivo</string>
    <string name="txtID">ID</string>
    <string name="txtNombreMascota">Nombre de la mascota</string>
    <string name="txtNombrePropietario">Nombre del propietario</string>
    <string name="txtDireccion">Dirección</string>
    <string name="txtTelefono">Telefono</string>
    <string name="txtEmail">e-mail</string>
    <string name="txtEspecie">Especie</string>
    <string name="txtGato">Gato</string>
    <string name="txtPerro">Perro</string>
    <string name="txtOtro">Otro</string>
    <string name="txtNacimiento">Fecha de nacimiento</string>
    <string name="txtSexo">Sexo</string>
    <string name="txtMacho">Macho</string>
    <string name="txtHembra">Hembra</string>
    <string name="txtRaza">Raza</string>
    <string name="txtColor">Color</string>
    <string name="txtParticulidades">Señas particulares</string>
    <string name="txtDescripcion">Foto del animal</string>
    <string name="txtDescImg">Imagen</string>
    <string name="txtVeterinario">Médico Veterinario</string>
    <string name="txtAceptar">Aceptar</string>
    <string name="txtEditMascota">Editar mascota</string>
    <string name="txtEliminarMascota">Eliminar mascota</string>
    <string name="txtBuscaMascota">Buscar mascota</string>
    <string name="txtPapelera">Papelera</string>
    <string name="txtBusqueda">Buscar mascota</string>
    <string name="txtIngreseBuscaMascota">Ingrese el ID de mascota para buscar</string>
    <string name="txtIngreseBuscaMascotaNomb">Ingrese el nombre de mascota para filtrar</string>
    <string name="txtDetMascota">Detalle de la mascota</string>
    <string name="txtConsultar">Mascotas</string>
    <string name="txtCreditos">Créditos</string>
    <string name="txtAutor">Autor:</string>
    <string name="txtVarAutor">Sanchez Valdin Kevin Ivan</string>
    <string name="txtMateria">Materia:</string>
    <string name="txtVarMateria">Programación móvil</string>
    <string name="txtCarrera">Carrera:</string>
    <string name="txtVarCarrera">Ingeniería en Sistemas Computacionales</string>
    <string name="txtUniversidad">Universidad:</string>
    <string name="txtVarUniversidad">Instituto Tecnologico de Toluca</string>
    <string name="txtPeriodo">Periodo:</string>
    <string name="txtVarPeriodo">Junio-Diciembre 2021</string>
    <string name="txtVersion">Version:</string>
    <string name="txtVarVersion">1.2.47</string>
    <string name="txtMaestra">Maestra:</string>
    <string name="txtVarMaestra">Elizabeth Pulido Alba</string>
    <string name="txtLimpiar">Limpiar</string>
    <string name="txtGuardar">Guardar</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="txtEliminar">Eliminar</string>
    <string name="txtEditar">Editar</string>
    <string name="txtVer">Ver</string>
    <string name="txtNuestoEquipo">Equipo especializado</string>
    <string name="txtMacotasFelices">Mascotas felices</string>
    <string name="txtDerechos">Copyright &#169; Todos los derechos reservados  | MascotApp&amp;2021</string>
    <string name="txtInicio">Veterinaria 24hr</string>
    <string name="txtDesc">
        Nuestro equipo médico está conformado por médicos <b>veterinarios zootecnistas certificados</b>
        y profesionales que se actualizan día a día en las diversas técnicas y tratamientos para
        el cuidado de su mascota, para proporcionarle a cada paciente la atención
        clínica veterinaria que se merecen.
    </string>
    <string name="txtInfoID">ID: </string>
    <string name="txtInfoNombreMascota">Nombre de la mascota: </string>
    <string name="txtInfoNombrePropietario">Nombre del propietario: </string>
    <string name="txtInfoDireccion">Dirección: </string>
    <string name="txtInfoTelefono">Telefono: </string>
    <string name="txtInfoEmail">e-mail: </string>
    <string name="txtInfoEspecie">Especie: </string>
    <string name="txtInfoNacimiento">Fecha de Nacimiento: </string>
    <string name="txtInfoSexo">Sexo: </string>
    <string name="txtInfoRaza">Raza: </string>
    <string name="txtInfoColor">Color: </string>
    <string name="txtInfoParticulidades">Señas particulares: </string>
    <string name="txtInfoVeterinario">Veterinario: </string>
    <string name="txtInfoEjmID">id</string>
    <string name="txtInfoEjmNombreMascota">nombre de la mascota</string>
    <string name="txtInfoEjmNombrePropietario">nombre del propietario</string>
    <string name="txtInfoEjmDireccion">dirección</string>
    <string name="txtInfoEjmTelefono">telefono</string>
    <string name="txtInfoEjmEmail">e-mail</string>
    <string name="txtInfoEjmEspecie">especie</string>
    <string name="txtInfoEjmNacimiento">fecha del nacimiento</string>
    <string name="txtInfoEjmSexo">sexo</string>
    <string name="txtInfoEjmRaza">raza</string>
    <string name="txtInfoEjmColor">color</string>
    <string name="txtInfoEjmParticulidades">particularidades</string>
    <string name="txtInfoEjmVeterinario">nombre del veterinario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtRecuperarContrasenia">Recuperar contraseña</string>
    <string name="txtIngreseEmailRecuperar">Se enviará un correo para  recuperar la contraseña</string>
    <string name="txtEnviar">Enviar correo</string>
    <string name="txtEmailRecuperar">Ingrese el correo eléctronico</string>
    <string name="Terminos1">1.  Estos Términos  y  Condiciones  de  Uso  regulan  las  reglas  a  que  se  sujeta  la  utilización  de  la   APP MascotApp
        (en  adelante,  la  APP),  que  puede  descargarse  desde  el dominio .<b>SofTec</b>  La  descarga  o  utilización  de  la  APP  atribuye
        la  condición  de  Usuario  a  quien  lo  haga  e implica  la  aceptación  de  todas las  condiciones  incluidas  en  este   documento 
        y  en  la  Política  de  Privacidad  y  el Aviso  Legal  de  dicha  página  Web.  El Usuario  debería  leer  estas condiciones  cada  
        vez  que  utilice  la  APP,  ya  que  podrían  ser   modificadas  en  lo  sucesivo. 
        <br />
        <br /></string>
    <string name="Terminos2">
        2.  Únicamente los  Usuarios  expresamente autorizados  
        por  <b>SofTec</b> podrán  acceder  a  la   descarga  y  uso  de  la  APP.  Los  Usuarios  que  no  dispongan  de  autorización,  no  
        podrán  acceder   a  dicho contenido. 
        <br />
        <br />
    </string>
    <string name="Terminos3">
        3.  Cargos:  eres  responsable  del pago  de  todos  los  costes  o  gastos  en  los  que  incurras 
        como  resultado  de descargar  y  usar  la  Aplicación  de  <b>SofTec</b>,  incluido  cualquier  cargo  de  red  de  operador  o
        itinerancia.  Consulta  con  tu  proveedor  de  servicios  los  detalles  al respecto. 
        <br />
        <br />
    </string>
    <string name="Terminos4">
        4.  Estadísticas anónimas: <b>SofTec</b>  se 
        reserva  el derecho  a  realizar  un  seguimiento  de  tu actividad  en  la  Aplicación  de  y  a  informar  de  ello  a  nuestros 
        proveedores  de  servicios  estadísticos  de terceros.  Todo  ello  de  forma  anónima. 
        <br />
        <br />
    </string>
    <string name="Terminos5">
        5.  Protección  de  tu  información  personal:
        queremos  ayudarte a  llevar  a  cabo  todos  los  pasos  necesarios para  proteger  tu  privacidad  e información.  Consulta  la 
        Política  de  privacidad  de  <b>SofTec</b> y  los avisos  sobre  privacidad  de  la  Aplicación  para  conocer  qué  tipo  de 
        información  recopilamos  y  las medidas que  tomamos  para  proteger  tu  información  personal. 
        <br />
        <br />
    </string>
    <string name="Terminos6">
        6.  Queda  prohibido  alterar  o 
        modificar  ninguna  parte de  la  APP  a  de  los  contenidas de  la   misma,  eludir, desactivar  o  manipular  de  cualquier  otra
        forma  (o  tratar  de  eludir,  desactivar  o   manipular)  las funciones  de  seguridad  u  otras  funciones  del programa  y 
        utilizar  la  APP  o  sus  contenidos  para  un  fin comercial o  publicitario.  Queda  prohibido  el uso  de  la  APP  con  la  
        finalidad  de  lesionar  bienes, derechos  o  intereses  de   <b>SofTec</b> o  de  terceros.  Queda  igualmente prohibido  realizar
        cualquier  otro  uso  que  altere,  dañe  o   inutilice  las  redes,  servidores,  equipos,  productos  y  programas informáticos  
        de  <b>SofTec</b> o  de   terceros. 
        <br />
        <br />
    </string>
    <string name="menu_veterinarios">Veterinarios</string>
</resources>