<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtDetMascota"
            android:textSize="32sp"
            android:textStyle="bold" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imgDetalleFoto"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_gravity="center"
                android:contentDescription="@string/txtDescripcion"
                android:src="@drawable/perro_1"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoID"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmID"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoNombreMascota"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetNomMas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmNombreMascota"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoNombrePropietario"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetNomProp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmNombrePropietario"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoDireccion"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetDirec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmDireccion"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoTelefono"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmTelefono"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEmail"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmEmail"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEspecie"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetEsp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmEspecie"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoNacimiento"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmNacimiento"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoSexo"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmSexo"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoRaza"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetRaz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmRaza"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoColor"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetCol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmColor"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoParticulidades"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetPart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmParticulidades"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoVeterinario"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetVet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtInfoEjmVeterinario"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <Button
            android:id="@+id/btnCerrarDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtAceptar"/>
    </LinearLayout>
</ScrollView>