<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|start"
    android:orientation="horizontal"
    android:paddingStart="30dp"
    android:paddingEnd="16dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleIMG"
        android:layout_marginBottom="5dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/perro_1"
        android:contentDescription="@string/txtDescImg"
        android:layout_marginRight="15dp" />


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textItemNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/txtInfoNombreMascota"
                android:textColor="@color/primaryDarkColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textItemEspecie"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtInfoEjmEspecie"
                    android:layout_weight="1"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/textItemEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/txtInfoNacimiento"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>


</LinearLayout>